== undefined

* enhancements
  * update URL in gemspec (by @ktdreyer)
  * Add `hostname` to Slack notifier (by @juanazam)
  * Allow `exception_recipients` to be a proc (by @kellyjosephprice)

== 4.1.4

* bug fixes
  * HTML-escape exception messages sent to hipchat (by @gburt)
  * Send the correct options in send_notice (by @pcboy)

== 4.1.3

* enhancements
  * Add a way to have a backtrace callback on notifiers (by @pcboy)

* bug fixes
  * Fix incompatible character encodings error (by @san650)

== 4.1.2
* enhancements
  * Change format of Slack notifications (by @eldano)

== 4.1.1

* bug fixes
  * Alternate way to monkeypatch (by @joshco)
  * Fix BacktraceCleaner namespacing (by @esdlocomb)

== 4.1.0

* enhancements
  * Add support for Sidekiq 3.0 (by @mbrictson)
  * Add IRC notifier (by @nathanjsharpe)
  * Add ActionController::UnknownFormat to default ignored exceptions (by @rezwyi)
  * Add message_template option to HipChat notifier (by @makimoto)
  * Add support for HipChat APIv2 (by @michaelherold)
  * Add Slack notifier (by @martin1keogh)
  * Add option for notifying on `X-Cascade` header (by @etipton)
  * Improve backtrace data (by @munkius)

* bug fixes
  * Fix `Rails.root` exception (by @hovatterz)
  * Fix email notifier in Sinatra (by @betesh)

== 4.0.1

* enhancements
  * Add HipChat notifier (by @j15e)
  * Log backtrace when notification fails
  * Send more info in Webhook notifier
  * Add HTTP method to request section

== 4.0.0

* enhancements
  * Be able to override delivery_method (by @jweslley)
  * Add logger to log when notifications cannot be shiped (by @jweslley)
  * Add Rails generator to create an initializer file (by @jweslley)
  * Add rails engine (by @jweslley)
  * Add sidekiq support (by @jweslley)
  * Add resque support (by @jweslley)
  * Better style for html views (by @jweslley)
  * Support customizable Mailer class (by @Bishop)
  * Turn ExceptionNotification Rails agnostic (by @jweslley)