@@ -4,6 +4,7 @@
   * update URL in gemspec (by @ktdreyer)
   * Add `hostname` to Slack notifier (by @juanazam)
   * Allow `exception_recipients` to be a proc (by @kellyjosephprice)
+  * Add `GithubNotifier` (by @sauy7)
 
 == 4.1.4
 
@@ -108,7 +109,7 @@
   * Add normalize_subject option to remove numbers from email so that they thread (by @jjb)
   * Allow the user to provide a custom message and hash of data (by @jjb)
   * Add support for configurable background sections and a data partial (by @jeffrafter)
-  * Include timestamp of exception in notification body	
+  * Include timestamp of exception in notification body
   * Add support for rack based session management (by @phoet)
   * Add ignore_crawlers option to ignore exceptions generated by crawlers
   * Add verbode_subject option to exclude exception message from subject (by @amishyn)
